--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "build": " echo \"Alert: no build required\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
