--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": " echo \"Alert: no build required\" ",
+    "build": "npm install ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -29,5 +29,8 @@
     "dotenv": "^16.3.1",
     "image-to-base64": "^2.2.0",
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.13.1 <16.14"
   }
 }
