--- a/package.json
+++ b/package.json
@@ -11,28 +11,30 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "marco.bardales@lotinternacional.com",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "express": "^4.18.2",
-    "firebase": "^10.7.1",
-    "firebase-admin": "^12.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mkdirp": "^3.0.1",
-    "pg": "^8.11.3",
-    "pg-format": "^1.0.4",
-    "uuid": "^9.0.1"
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "crypto": "1.0.1",
+    "express": "4.18.2",
+    "firebase": "10.7.1",
+    "firebase-admin": "12.0.0",
+    "image-type": "5.2.0",
+    "is-base64": "1.1.0",
+    "jsonwebtoken": "9.0.2",
+    "mkdirp": "3.0.1",
+    "pg": "8.11.3",
+    "pg-format": "1.0.4",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "convert-base64-to-image": "^0.0.16",
-    "dotenv": "^16.3.1",
-    "image-to-base64": "^2.2.0",
-    "nodemon": "^3.0.2"
+    "convert-base64-to-image": "0.0.16",
+    "dotenv": "16.3.1",
+    "image-to-base64": "2.2.0",
+    "nodemon": "3.0.2"
   },
   "engines": {
-    "node": ">=16.13.1 <16.14"
+    "node": ">=16.13 <16.14"
   }
 }
