--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "2.8.5",
     "crypto": "1.0.1",
     "express": "4.18.2",
+    "express-paginate": "1.0.2",
     "firebase": "10.7.1",
     "firebase-admin": "12.0.0",
     "image-type": "5.2.0",
