--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "build": "npm install ",
+    "swagger-autogen": "node docs/swagger.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,13 +28,16 @@
     "mkdirp": "3.0.1",
     "pg": "8.11.3",
     "pg-format": "1.0.4",
+    "swagger-autogen": "2.23.7",
+    "swagger-ui-express": "5.0.0",
     "uuid": "9.0.1"
   },
   "devDependencies": {
     "convert-base64-to-image": "0.0.16",
     "dotenv": "16.3.1",
     "image-to-base64": "2.2.0",
-    "nodemon": "3.0.2"
+    "nodemon": "3.0.2",
+    "swagger-autogen": "2.23.7"
   },
   "engines": {
     "node": ">=16.13 <16.14"
