--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "is-base64": "1.1.0",
     "jsonwebtoken": "9.0.2",
     "mkdirp": "3.0.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "8.11.3",
     "pg-format": "1.0.4",
     "swagger-autogen": "2.23.7",
