--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "is-base64": "1.1.0",
     "jsonwebtoken": "9.0.2",
     "mkdirp": "3.0.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "6.9.8",
     "pg": "8.11.3",
     "pg-format": "1.0.4",
     "swagger-autogen": "2.23.7",
@@ -41,6 +42,6 @@
     "swagger-autogen": "2.23.7"
   },
   "engines": {
-    "node": ">=16.13 <16.14"
+    "node": ">=16.13 <17"
   }
 }
